--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <meta name="theme-color" content="#fefefe" />
+    <!-- <link  rel="stylesheet" href="./assets/css/bootstrap.css">
+    <link  rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link  rel="stylesheet" href="./assets/css/style.css">
+    <link  rel="stylesheet" href="./assets/fontawesome/css/all.css"> -->
+    <title>Mini project TODO for using React for Backend</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
