--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#fefefe" />
-    <!-- <link  rel="stylesheet" href="./assets/css/bootstrap.css">
+    <link  rel="stylesheet" href="./assets/css/bootstrap.css">
     <link  rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link  rel="stylesheet" href="./assets/css/style.css">
-    <link  rel="stylesheet" href="./assets/fontawesome/css/all.css"> -->
+    <link  rel="stylesheet" href="./assets/fontawesome/css/all.css">
     <title>Mini project TODO for using React for Backend</title>
   </head>
   <body>
